force-app/main/default/objects/ssot__AbnExperimentationDailySummary__dlm/fields/ssot__AssignedParticipantsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssignedParticipantsCount__c</fullName>
    <label>Assigned Participants Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssignedParticipantsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>