force-app/main/default/objects/ssot__AbnExperimentationDailySummary__dlm/fields/ssot__ExperimentSummaryMetricType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExperimentSummaryMetricType__c</fullName>
    <label>Metric Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExperimentSummaryMetricType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>