force-app/main/default/objects/ssot__AbnExperimentationDailySummary__dlm/fields/ssot__ForDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ForDate__c</fullName>
    <label>For Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ForDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>