force-app/main/default/objects/ssot__AbnExperimentationDailySummary__dlm/fields/ssot__LastUpdatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastUpdatedDateTime__c</fullName>
    <label>Last Updated Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastUpdatedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>