force-app/main/default/objects/ssot__AbnExperimentationDailySummary__dlm/fields/ssot__MetricId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MetricId__c</fullName>
    <label>Metric Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MetricId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>