force-app/main/default/objects/ssot__AbnExperimentationDailySummary__dlm/fields/ssot__MetricName__c.field-meta.xml
<CustomField>
    <fullName>ssot__MetricName__c</fullName>
    <label>Metric Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MetricName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>