force-app/main/default/objects/ssot__AbnExperimentationDailySummary__dlm/fields/ssot__MetricValueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MetricValueNumber__c</fullName>
    <label>Metric Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MetricValueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>