force-app/main/default/objects/ssot__AbnExperimentationDailySummary__dlm/fields/ssot__rel_1726745175890_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726745175890_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AbnExperimentationDailySummary_AbnEx_rel</label>
    <referenceTo>ssot__AbnExperimentCohort__dlm</referenceTo>
    <relationshipLabel>AbnExperimentationDailySummary_AbnEx_rel</relationshipLabel>
    <relationshipName>rel_1726745175890_end</relationshipName>
    <type>Lookup</type>
</CustomField>