force-app/main/default/objects/ssot__AbnExperimentationDailySummary__dlm/fields/ssot__SignalNumeratorValueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SignalNumeratorValueNumber__c</fullName>
    <label>Signal Numerator Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SignalNumeratorValueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>